sass/loader.module.sass
/* 
 * Made by Nove Group with love.
 * Visit our GitHub: https://github.com/nove-org
 * Copyright (c) 2023 Nove Group - All rights reserved.
 */

@use 'brand' as *

p.text
    display: none

div.loaderClassic
    display: flex
    flex-direction: column
    justify-content: center
    align-items: center
    width: 32px
    height: 32px

div.loaderWindow
    display: flex
    flex-direction: column
    justify-content: center
    align-items: center
    width: 100%
    min-height: calc( 100vh - 7.2rem )
    & p
        display: block
        margin-top: 10px
        font-weight: 400
        color: $font2

div.loader
    display: inline-block
    width: 24px
    height: 24px
    & div
        box-sizing: border-box
        display: block
        position: absolute
        border-radius: 50%
        border: 4px solid $colored
        animation: _ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite
        border-color: $colored transparent transparent transparent !important
        width: 24px
        height: 24px
        &:nth-child(1)
            animation-delay: -0.45s
        &:nth-child(2)
            animation-delay: -0.3s
        &:nth-child(3)
            animation-delay: -0.15s

@keyframes _ring
    0%
        transform: rotate(0deg)
    100%
        transform: rotate(360deg)

